@@ -275,7 +275,7 @@ void CLASS canon_600_load_raw()
 
   for (irow=row=0; irow < height; irow++) {
     if (fread (data, 1, 1120, ifp) < 1120) derror();
-    pix = raw_image + row*raw_pitch;
+    pix = raw_image + row*raw_width;
     for (dp=data; dp < data+1120;  dp+=10, pix+=8) {
       pix[0] = (dp[0] << 2) + (dp[1] >> 6    );
       pix[1] = (dp[2] << 2) + (dp[1] >> 4 & 3);
@@ -508,7 +508,7 @@ void CLASS canon_load_raw()
   zero_after_ff = 1;
   getbits(-1);
   for (row=0; row < raw_height; row+=8) {
-    pixel = raw_image + row*raw_pitch;
+    pixel = raw_image + row*raw_width;
     nblocks = MIN (8, raw_height-row) * raw_width >> 6;
     for (block=0; block < nblocks; block++) {
       memset (diffbuf, 0, sizeof diffbuf);
@@ -1406,11 +1406,7 @@ void CLASS rollei_load_raw()
       todo[i+1] = buffer >> (14-i)*5;
     }
     for (i=0; i < 16; i+=2)
-      {
-        int row = todo[i]/raw_width;
-        int col = todo[i]%raw_width;
-        RAW(row,col) = (todo[i+1] & 0x3ff);
-      }
+      raw_image[todo[i]] = (todo[i+1] & 0x3ff);
   }
   maximum = 0x3ff;
 }
@@ -1599,27 +1595,13 @@ void CLASS phase_one_load_raw()
   bkey = get2();
   t_mask = ph1.format == 1 ? 0x5555:0x1354;
   fseek (ifp, data_offset, SEEK_SET);
-#if 0
-  read_shorts (raw_image, raw_width*raw_height); // raw_pitch should be exactly raw_width
-#else
-  for(int row = 0; row < raw_height; row++)
-    read_shorts(raw_image+row*raw_pitch,raw_width);
-#endif
+  read_shorts (raw_image, raw_width*raw_height);
   if (ph1.format)
     for (i=0; i < raw_width*raw_height; i+=2) {
-#if 0
       a = raw_image[i+0] ^ akey;
       b = raw_image[i+1] ^ bkey;
       raw_image[i+0] = (a & t_mask) | (b & ~t_mask);
       raw_image[i+1] = (b & t_mask) | (a & ~t_mask);
-#else
-      int row = i/raw_width;
-      int col = i%raw_height;
-      a = RAW(row,col) ^ akey;
-      b = RAW(row,col+1) ^ bkey;
-      RAW(row,col) = (a & t_mask) | (b & ~t_mask);
-      RAW(row,col+1) = (b & t_mask) | (a & ~t_mask);
-#endif
     }
 }
 
@@ -1665,7 +1647,7 @@ void CLASS phase_one_load_raw_c()
 
   pixel = (ushort *) calloc (raw_width + raw_height*4, 2);
   merror (pixel, "phase_one_load_raw_c()");
-  offset = (int *) (pixel + raw_width); 
+  offset = (int *) (pixel + raw_width);
   fseek (ifp, strip_offset, SEEK_SET);
   for (row=0; row < raw_height; row++)
     offset[row] = get4();
@@ -1758,7 +1740,7 @@ void CLASS leaf_hdr_load_raw()
 	fseek (ifp, get4(), SEEK_SET);
       }
       if (filters && c != shot_select) continue;
-      if (filters) pixel = raw_image + r*raw_pitch;
+      if (filters) pixel = raw_image + r*raw_width;
       read_shorts (pixel, raw_width);
       if (!filters && (row = r - top_margin) < height)
 	for (col=0; col < width; col++)
@@ -1776,12 +1758,7 @@ void CLASS unpacked_load_raw()
   int row, col, bits=0;
 
   while (1 << ++bits < maximum);
-#if 0
   read_shorts (raw_image, raw_width*raw_height);
-#else
-  for(row=0;row<raw_height;row++)
-    read_shorts(raw_image+row*raw_pitch,raw_width);
-#endif
   for (row=0; row < raw_height; row++)
     for (col=0; col < raw_width; col++)
       if ((RAW(row,col) >>= load_flags) >> bits
@@ -2200,17 +2177,8 @@ void CLASS kodak_radc_load_raw()
 	  RAW(y,x) = val;
 	}
   }
-#if 0
   for (i=0; i < height*width; i++)
     raw_image[i] = curve[raw_image[i]];
-#else
-  for (i=0; i < height*width; i++)
-    {
-      int row = i/width;
-      int col = i%width;
-      RAW(row,col) = curve[RAW(row,col)];
-    }
-#endif
   maximum = 0x3fff;
 }
 
@@ -2618,7 +2586,7 @@ void CLASS sony_load_raw()
     key = key << 8 | head[i];
   fseek (ifp, data_offset, SEEK_SET);
   for (row=0; row < raw_height; row++) {
-    pixel = raw_image + row*raw_pitch;
+    pixel = raw_image + row*raw_width;
     if (fread (pixel, 2, raw_width, ifp) < raw_width) derror();
     sony_decrypt ((unsigned int *) pixel, raw_width/2, !row, key);
     for (col=0; col < raw_width; col++)
@@ -2787,11 +2755,7 @@ void CLASS smal_decode_segment (unsigned seg[2][2], int holes)
       diff = diff ? -diff : 0x80;
     if (ftell(ifp) + 12 >= seg[1][1])
       diff = 0;
-#if 0
     raw_image[pix] = pred[pix & 1] += diff;
-#else
-    RAW(pix/raw_width,pix%raw_width) = pred[pix & 1] += diff;
-#endif
     if (!(pix & 1) && HOLE(pix / raw_width)) pix += 2;
   }
   maximum = 0xff;
@@ -2933,7 +2897,7 @@ void CLASS redcine_load_raw()
   jas_stream_close (in);
 #endif
 }
-#line 3913 "dcraw/dcraw.c"
+#line 3877 "dcraw/dcraw.c"
 void CLASS crop_masked_pixels()
 {
   int row, col;
@@ -3036,7 +3000,7 @@ void CLASS remove_zeroes()
   RUN_CALLBACK(LIBRAW_PROGRESS_REMOVE_ZEROES,1,2);
 #endif
 }
-#line 4181 "dcraw/dcraw.c"
+#line 4145 "dcraw/dcraw.c"
 void CLASS gamma_curve (double pwr, double ts, int mode, int imax)
 {
   int i;
@@ -4534,7 +4498,7 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
     fseek (ifp, save, SEEK_SET);
   }
 }
-#line 5683 "dcraw/dcraw.c"
+#line 5647 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -5049,7 +5013,7 @@ void CLASS parse_kodak_ifd (int base)
     fseek (ifp, save, SEEK_SET);
   }
 }
-#line 6203 "dcraw/dcraw.c"
+#line 6167 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -6293,7 +6257,7 @@ void CLASS parse_redcine()
     data_offset = get4();
   }
 }
-#line 7449 "dcraw/dcraw.c"
+#line 7413 "dcraw/dcraw.c"
 char * CLASS foveon_gets (int offset, char *str, int len)
 {
   int i;
@@ -6394,7 +6358,7 @@ void CLASS parse_foveon()
   }
   is_foveon = 1;
 }
-#line 7552 "dcraw/dcraw.c"
+#line 7516 "dcraw/dcraw.c"
 /*
    All matrices are from Adobe DNG Converter unless otherwise noted.
  */
@@ -8837,7 +8801,7 @@ c603:
 }
 
 
-#line 10086 "dcraw/dcraw.c"
+#line 10050 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
 #ifndef LIBRAW_LIBRARY_BUILD
@@ -9068,7 +9032,7 @@ int CLASS flip_index (int row, int col)
   if (flip & 1) col = iwidth  - 1 - col;
   return row * iwidth + col;
 }
-#line 10342 "dcraw/dcraw.c"
+#line 10306 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
